--- a/pages/index.css
+++ b/pages/index.css
@@ -147,10 +147,11 @@ font-weight: 500;
 font-size: 16px;
 line-height: 20px;
 color:#6f6f6f;
-margin: 0;
+
 align-items: flex-end;
 justify-content: space-between;
-align-content: flex-end;
+
+margin-top: auto;
 
 
 }
@@ -158,13 +159,15 @@ align-content: flex-end;
 
 .header__footer_paragraph{
     margin: 0;
-    align-content: flex-end;
+
 
 
 }
 
 .header__footer_hours{
-    align-content: flex-end;
+
+    margin-top: auto;
+ 
    
   
 }
