--- a/pages/index.css
+++ b/pages/index.css
@@ -329,6 +329,9 @@ margin-left: 80px;
 .recipes__videos{
    display: flex;
    justify-content: center;
+   margin-top: 80px;
+   margin-bottom: 215px;
+
    
 }
 
@@ -350,16 +353,28 @@ margin-left: 80px;
 
 
 
-
+.recipes__video_caption_container{
+    max-width: 480px;
+    display: flex;
+}
 .recipes__video_caption{
     margin: 0;
+    font-family: Inter;
+
+font-style: normal;
+
+font-weight: 500;
+
+font-size: 20px;
+
+line-height: 30px;
 }
 
 
 .recipe__divider{
     flex-grow: 1;
-    border-bottom: 1px solid black;
-    margin:0 10px 0 10px;
+    
+    margin:0 ;
 }
 
 .reservation{
