--- a/pages/index.css
+++ b/pages/index.css
@@ -26,7 +26,7 @@
     flex-direction: column;
      background-color: #FFF;
      background-image: url("../images/background_header.svg");
-     size: cover;
+     background-size: cover;
      background-repeat: no-repeat;
      background-position: center;
      min-height: 720px;
@@ -182,8 +182,7 @@ margin-top: auto;
     background-color: #0a2750;
     background-repeat: no-repeat;
     background-position: center;
-    width: cover;
-    height:cover;
+    background-size: cover;
     color:white;
 
 }
@@ -306,7 +305,7 @@ padding-bottom: 16px;
     background-color: #FFF;
     background-image: url("/se_project_coffeeshop/images/background_recipes.svg");
     background-repeat: no-repeat;
-    size:cover;
+    background-size: cover;
     background-position: center;
 
     display: flex;
@@ -391,9 +390,9 @@ line-height: 30px;
 
     background-color: #d9e7ff;
     background-image: url("/se_project_coffeeshop/images/background_reservation.svg");
-    background-repeat: none;
+    background-repeat: no-repeat;
     background-position: center;
-    size:cover;
+    background-size: cover;
     text-align: center;
     padding-bottom: 100px;
 
@@ -511,12 +510,25 @@ column-gap: 12px;
 
 .about{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     background-color: #0a2750;
+    position: relative;
     z-index:-1;
     
 }
+@keyframes pulsate {
+    0%{
+        opacity: 0;
+    }
+    50%{
+        opacity: 0.6;
+    }
 
+    100%{
+        transform: scale(1.3);
+        opacity: 0;
+    }
+}
 .about__circle {
     background-color: #2f80ed;
     width: 426px;
@@ -524,10 +536,18 @@ column-gap: 12px;
     border-radius: 50%;
    
     position: absolute;
+    left:-129px;
+    top:-152px;
     z-index: 1;
   
    
     
+  }
+
+  .about__circle_animation_blurred{
+    animation: pulsate 1.3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
   }
   .about__title{
 
@@ -547,15 +567,13 @@ column-gap: 12px;
 
   .about__description_container{
     z-index: 2;
-    align-content: flex-end;
-    margin-left: auto;
     font-family: Noto Serif;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
     line-height: 30px;
-    margin-top:119px;
-
+    margin-top: 119px;
+    margin-left: auto;
   
   }
   .about__paragraph{
@@ -563,6 +581,7 @@ column-gap: 12px;
     max-width: 660px;
     margin:0;
     margin-bottom: 20px;
+    
    
   }
   .about__paragraph:last-child{
@@ -570,29 +589,42 @@ column-gap: 12px;
     margin-bottom: 173px;
   }
 
+  .about__paragraph:first-child{
+    padding-bottom: 0;
+   
+  }
+
   .footer{
     background: linear-gradient(180deg, #0A2850 0%, #071931 100%);
     color:white;
+    padding-top: 60px;
+   
   }
 
   .footer__content{
-    margin-left: 80px;
-    margin-top: 60px;
-    margin-right:100px;
-    margin-bottom: 108px;
+    display: flex;
+
   }
   .footer__logo{
     width:116px;
     height:21px;
+    padding-left: 80px;
+  }
+
+  .footer__social_media{
+   margin-left:auto;
+   margin-right: 100px;
+
   }
 
   .footer__social_media_header{
-    padding-bottom: 20px;
     font-family: Inter;
 font-style: normal;
 font-weight: bold;
 font-size: 16px;
 line-height: 20px;
+margin: 0;
+padding-bottom: 20px;
 
   }
   .footer__social_medias{
@@ -602,10 +634,12 @@ font-weight: normal;
 font-size: 16px;
 line-height: 20px;
 list-style: none;
+margin:0;
+padding: 0;
   }
 
-  .footer__social_medias:first-child{
-    padding-bottom: 16px;
+  .footer__social_media:last-child{
+    padding-top: 16px;
   }
 
   .footer__social_media_logo{
@@ -615,7 +649,7 @@ list-style: none;
   }
 
   .footer__copyright{
-    padding: 0 0 60px 0;  
+    padding: 108px 0 60px 80px;  
     margin:0;
 
     font-family: Inter;
