--- a/pages/index.css
+++ b/pages/index.css
@@ -55,7 +55,7 @@
     z-index: 2;
 }
 .header__span-accent{
-    font-family:'Noto+Serif','Times New Roman', serif;;
+    font-family:'Noto+Serif','Times New Roman', serif;
     font-style: italic;
     font-weight: normal;
     font-size: 60px;
@@ -66,7 +66,7 @@
 .header__description{
     margin-left: 80px;
     margin-top: 28px;
-    font-family:'Noto+Serif','Times New Roman', serif;Serif;
+    font-family:'Noto+Serif','Times New Roman', serif;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
