--- a/pages/index.css
+++ b/pages/index.css
@@ -168,7 +168,7 @@
     text-align: center;
     margin-top: 24px;
     max-width: 780px;
-    font-family: 'Noto+Serif','Times New Roman', serif;Serif;
+    font-family: 'Noto+Serif','Times New Roman', serif;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
@@ -258,7 +258,7 @@
 }
 
 .recipes__subtitle{
-    font-family: 'Noto+Serif','Times New Roman', serif;Serif;
+    font-family: 'Noto+Serif','Times New Roman', serif;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
