--- a/pages/index.css
+++ b/pages/index.css
@@ -63,6 +63,12 @@
     color: #2F80ED;
 }
 
+.header__title_divider{
+    border-style: none;
+    padding:0;
+    margin:0;
+}
+
 .header__description{
     margin-left: 80px;
     margin-top: 28px;
