--- a/pages/index.css
+++ b/pages/index.css
@@ -1,534 +1,11 @@
-@import url("./vendor/normalize.css");
+@import url("../vendor/normalize.css");
+@import url("../blocks/page.css");
+@import url("../blocks/header.css");
+@import url("../blocks/menu.css");
+@import url("../blocks/recipes.css");
+@import url("../blocks/reservation.css");
+@import url("../blocks/about.css");
+@import url("../blocks/footer.css");
 
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif&display=swap');
 
-.font-container_font_inter{
-    font-family: 'Inter', Arial, sans-serif;
-}
-
-.font-container_font_noto_serif{
-    font-family: 'Noto+Serif','Times New Roman', serif;
-}
-
-.page{
-    min-width: 1100px;
-    max-width: 1600px;
-    margin: 0 auto;
-    font-family: 'Inter', Arial, sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-}
-
-.header{
-    display: flex;
-    flex-direction: column;
-     background-color: #FFF;
-     background-image: url("../images/background_header.svg");
-     background-size: cover;
-     background-repeat: no-repeat;
-     background-position: center;
-     min-height: 720px;
-     max-height: 800px;
-     height: 100vh;
-     position: relative;
-     z-index: 0;
-}
-.header__image{
-    width: 646px;
-    height:568px;
-    position: absolute;
-    top:124px;
-    right:5px;
-    z-index:-1;
-}
-
-.header__title{
-    margin-left: 80px;
-    margin-top: 80px;
-    max-width: 729px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 60px;
-    line-height: 72px;
-    z-index: 2;
-}
-.header__span-accent{
-    font-family:'Noto+Serif','Times New Roman', serif;
-    font-style: italic;
-    font-weight: normal;
-    font-size: 60px;
-    line-height: 72px;
-    color: #2F80ED;
-    display: block;
-}
-
-.header__other-accent{
-    display: block;
-}
-
-.header__description{
-    margin-left: 80px;
-    margin-top: 28px;
-    font-family:'Noto+Serif','Times New Roman', serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    max-width: 683px;
-}
-.logo{
-    width:125px;
-    height:142px;
-    margin-left: 30px;
-    margin-top: 30px;
-}
-
-.nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-}
-
-.nav__links {
-    display: flex;
-    list-style: none;
-    padding-left: 0;
-    margin-top: 8px;
-    margin-bottom: 0;
-    align-items: center;
-    column-gap: 20px;
-  }
-
-  .nav__link {
-  color: #000000;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.nav__link:hover{
-    color: #1f69c9;
-  }
-
-
-.header__footer{
-  display: flex;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    color:#6f6f6f;
-    align-items: flex-end;
-    justify-content: space-between;
-    margin-top: auto;
-}
-
-
-.header__footer-paragraph{
-    margin: 0;
-}
-
-.header__footer-hours{
-
-    margin-bottom: 40px;
-    margin-left: 80px;
-    margin-top: auto; 
-  
-}
-.header__footer-address{
-    margin-right: 80px;
-    margin-bottom: 40px;
-}
-
-.menu{
-    background-color: #0a2750;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    color:white;
-}
-
-.menu__title{
-
-    margin:0 auto 0 auto;
-    text-align: center;
-    max-width: 780px;
-    padding-top: 100px;
-    font-family: 'Inter', Arial, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 44px;
-    line-height: 52px;
-}
-
-.menu__title-subtitle{
-    margin:0 auto 0 auto;
-    text-align: center;
-    margin-top: 24px;
-    max-width: 780px;
-    font-family: 'Noto+Serif','Times New Roman', serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-}
-
-.menu__cards{
-    margin-top: 100px;
-    display:flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding-bottom: 100px;
-    column-gap: 100px;
-}
-
-.menu__card{
-    max-width: 600px;
-    flex-direction: column;
-    flex-basis: 43%;
-}
-
-
-.menu__card-title{
-    font-family: 'Inter', Arial, sans-serif;
-    margin-top:0;
-    padding-bottom: 32px;
-    margin-bottom: 0;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 30px;
-}
-
-.menu__card-list{
-    font-family: 'Noto+Serif','Times New Roman', serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
-    list-style: none;
-    padding-left: 0;
-    margin-top:0;
-    padding-bottom: 16px;
-}
-
-.menu__card-list-item{
-    padding-bottom: 16px;
-    display: flex;
-    
-}
-.menu__card-list-item:last-child{
-    padding-bottom:0;
-}
-
-.menu__divider{
-    flex-grow: 1;
-    border-bottom: 1px solid white;
-    margin:0 10px 0 10px;
-}
-
-
-
-
-.baked{
-    margin-top: 100px;
-}
-
-.recipes{
-    background-color: #FFF;
-    background-image: url("/se_project_coffeeshop/images/background_recipes.svg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-}
-
-.recipes__title{
-    max-width: 580px;
-    margin-left: 80px;
-    margin-top: 100px;
-    font-family: 'Inter', Arial, sans-serif;
-    font-style: normal;
-    font-weight:500;
-    font-size: 44px;
-    line-height: 52px;
-}
-
-.recipes__subtitle{
-    font-family: 'Noto+Serif','Times New Roman', serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    margin-top: 24px;
-    max-width: 438px;
-    margin-left: 80px;
-}
-.recipes__videos{
-   display: flex;
-   justify-content: center;
-   margin-top: 80px;
-   margin-bottom: 215px;
-}
-
-.recipe-video:first-child{
-    margin-right: 40px;
-}
-
-.recipe-video__iframe{
-    width: 480px;
-    height:273px;
-}
-
-.recipes__video-caption-container{
-    max-width: 480px;
-    display: flex;
-}
-.recipes__video-caption{
-    margin: 0;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 30px;
-}
-
-
-.recipe-divider{
-    flex-grow: 1;
-    margin:0;
-}
-
-.reservation{
-
-    background-color: #d9e7ff;
-    background-image: url("/se_project_coffeeshop/images/background_reservation.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    text-align: center;
-}
-
-.reservation__title{
-  padding-top:100px;
-}
-
-.reservation__form{
-margin-top: 80px;
-padding-bottom: 120px;
-border-radius: 4px;
-max-width: 385px;
-display: flex;
-flex-direction: column;
-margin-left: auto;
-margin-right: auto;
-}
-.reservation__form-fieldset{
-padding-bottom: 8px;
-border-style: none;
-text-align: start;
-padding: 0;
-margin: 0 0 8px 0;
-font-family: Inter;
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 20px;
-}
-.reservation__form-input{
-    border-radius: 4px;
-    margin-bottom: 32px;
-    max-width: 385px;
-    height:60px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    color: #838383;
-}
-
-.reservation__button{
-    border-radius: 4px;
-    transition: opacity .5s ease-out;
-    border-style: none;
-    background-color:#2f80ed;
-    color:white;
-    height:60px;
-    max-width: 385px;
-    font-family: Inter;
-    margin-top: 32px;
-    margin-bottom: 32px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-}
-
-.reservation__button:hover{
-    opacity: 70%;
-}
-
-.reservation__checkbox-container{
-display: flex;
-justify-content: center;
-margin-top: 0px;
-column-gap: 12px;
-}
-
-.reservation__checkbox-text{
-    margin-top:0px;
-}
-
-.reservation__checkbox{
-    border-radius: 2px;
-    margin-top:0px;
-    height:20px;
-    width:20px;
-    padding-left: 12px;
-}
-
-.about{
-    display: flex;
-    flex-direction: row;
-    background-color: #0a2750;
-    position: relative;
-    z-index:-1;
-}
-@keyframes pulsate {
-    0%{
-        opacity: 0;
-    }
-    50%{
-        opacity: 0.6;
-    }
-
-    100%{
-        transform: scale(1.3);
-        opacity: 0;
-    }
-}
-.about__circle {
-    background-color: #2f80ed;
-    width: 426px;
-    height: 426px;
-    border-radius: 50%;
-    position: absolute;
-    left:-129px;
-    top:-152px;
-    z-index: 1;
-  }
-
-  .about__circle_animation-blurred{
-    animation: pulsate 1.3s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
-  }
-  .about__title{
-    max-width: 251px;
-    color:white;
-    z-index: 2;
-    margin-top: 100px;
-    margin-left:80px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 44px;
-    line-height: 52px;
-  }
-
-  .about__description-container{
-    z-index: 2;
-    font-family: 'Noto+Serif','Times New Roman', serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    margin-top: 119px;
-    margin-left: auto;
-  }
-  .about__paragraph{
-    color:white;
-    max-width: 660px;
-    margin:0;
-    margin-bottom: 20px;
-  }
-  .about__paragraph:last-child{
-    padding-bottom: 0;
-    margin-bottom: 173px;
-  }
-
-  .about__paragraph:first-child{
-    padding-bottom: 0;
-  }
-
-  .footer{
-    background: linear-gradient(180deg, #0A2850 0%, #071931 100%);
-    color:white;
-    padding-top: 60px;
-  }
-
-  .footer__content{
-    display: flex;
-  }
-
-  .footer__logo{
-    width:116px;
-    height:21px;
-    padding-left: 80px;
-  }
-
-  .footer__social-media{
-   margin-left:auto;
-   margin-right: 100px;
-
-  }
-
-  .footer__social-media-header{
-    font-family: Inter;
-font-style: normal;
-font-weight: bold;
-font-size: 16px;
-line-height: 20px;
-margin: 0;
-padding-bottom: 20px;
-
-  }
-  .footer__social-medias{
-  font-family: Inter;
-font-style: normal;
-font-weight: normal;
-font-size: 16px;
-line-height: 20px;
-list-style: none;
-margin:0;
-padding: 0;
-  }
-
-  .footer__social-media:last-child{
-    padding-top: 16px;
-  }
-
-  .footer__social-media-logo{
-    width: 16px;
-    height:16px;
-    padding-right: 10px;
-  }
-
-  .footer__copyright{
-    padding: 108px 0 60px 80px;
-    margin:0;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
-}
