--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -23,7 +23,7 @@
   }
 
   .footer__social-media-header{
-    font-family: Inter;
+    font-family: 'Inter', Arial, sans-serif;
 font-style: normal;
 font-weight: bold;
 font-size: 16px;
@@ -33,7 +33,7 @@ padding-bottom: 20px;
 
   }
   .footer__social-medias{
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
 font-style: normal;
 font-weight: normal;
 font-size: 16px;
@@ -56,7 +56,7 @@ padding: 0;
   .footer__copyright{
     padding: 108px 0 60px 80px;
     margin:0;
-    font-family: Inter;
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
