--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -29,7 +29,7 @@ border-style: none;
 text-align: start;
 padding: 0;
 margin: 0 0 8px 0;
-font-family: Inter;
+font-family: 'Inter', Arial, sans-serif;
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
@@ -40,7 +40,7 @@ line-height: 20px;
     margin-bottom: 32px;
     max-width: 385px;
     height:60px;
-    font-family: Inter;
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
@@ -56,7 +56,7 @@ line-height: 20px;
     color:white;
     height:60px;
     max-width: 385px;
-    font-family: Inter;
+    font-family: 'Inter', Arial, sans-serif;
     margin-top: 32px;
     margin-bottom: 32px;
     font-style: normal;
