--- a/blocks/header.css
+++ b/blocks/header.css
@@ -33,7 +33,7 @@
     z-index: 2;
 }
 .header__span-accent{
-    font-family: "Noto Serif",'Times New Roman', serif;;
+    font-family: "Noto Serif",'Times New Roman', serif;
     font-style: italic;
     font-weight: normal;
     font-size: 60px;
