--- a/blocks/about.css
+++ b/blocks/about.css
@@ -41,7 +41,7 @@
     z-index: 2;
     margin-top: 100px;
     margin-left:80px;
-    font-family: Inter;
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 44px;
@@ -50,13 +50,14 @@
 
   .about__description-container{
     z-index: 2;
-    font-family: 'Noto+Serif','Times New Roman', serif;
+    font-family:"Noto Serif",'Times New Roman', serif;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
     line-height: 30px;
     margin-top: 119px;
     margin-left: auto;
+    margin-right: 80px;
   }
   .about__paragraph{
     color:white;
