--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -13,7 +13,7 @@
     text-align: center;
     max-width: 780px;
     padding-top: 100px;
-    font-family: Inter;
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 44px;
@@ -25,7 +25,7 @@
     text-align: center;
     margin-top: 24px;
     max-width: 780px;
-    font-family: 'Noto+Serif','Times New Roman', serif;
+    font-family: "Noto Serif",'Times New Roman', serif;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
@@ -52,7 +52,7 @@
     margin-top:0;
     padding-bottom: 32px;
     margin-bottom: 0;
-    font-family: Inter;
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 20px;
@@ -60,7 +60,7 @@
 }
 
 .menu__card-list{
-    font-family:'Noto+Serif','Times New Roman', serif;
+    font-family:"Noto Serif",'Times New Roman', serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
