--- a/blocks/header.css
+++ b/blocks/header.css
@@ -31,9 +31,10 @@
     font-size: 60px;
     line-height: 72px;
     z-index: 2;
+    margin-bottom: 0px;
 }
 .header__span-accent{
-    font-family: "Noto Serif",'Times New Roman', serif;
+    font-family: "Noto Serif",'Times New Roman', serif;;
     font-style: italic;
     font-weight: normal;
     font-size: 60px;
@@ -42,9 +43,6 @@
     display: block;
 }
 
-.header__other-accent{
-    display: block;
-}
 
 .header__description{
     margin-left: 80px;
@@ -55,47 +53,8 @@
     font-size: 20px;
     line-height: 30px;
     max-width: 683px;
-}
-.logo{
-    width:125px;
-    height:142px;
-    margin-left: 30px;
-    margin-top: 30px;
-}
-
-.nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-}
-
-.nav__links {
-    display: flex;
-    list-style: none;
-    padding-left: 0;
-    margin-top: 30px;
-    margin-right: 80px;
     margin-bottom: 0;
-    align-items: center;
-    column-gap: 20px;
-    justify-content: flex-start;
-
-  }
-
-  .nav__link {
-  color: #000000;
-  text-decoration: none;
-  font-weight: bold;
 }
-
-.nav__link:hover{
-    color: #1f69c9;
-  }
 
 
 .header__footer{
@@ -111,8 +70,11 @@
     margin-top: auto;
 }
 
+.header__footer-hours:last-child{
+    margin-left: auto;
+}
 
-.header__footer-paragraph{
+.header__paragraph{
     margin: 0;
 }
 
