--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -5,6 +5,7 @@
     background-position: center;
     background-size: cover;
     color:white;
+    background-image: url("../images/background_menu.svg");
 }
 
 .menu__title{
@@ -20,7 +21,7 @@
     line-height: 52px;
 }
 
-.menu__title-subtitle{
+.menu__subtitle{
     margin:0 auto 0 auto;
     text-align: center;
     margin-top: 24px;
@@ -39,56 +40,4 @@
     flex-wrap: wrap;
     padding-bottom: 100px;
     column-gap: 100px;
-}
-
-.menu__card{
-    max-width: 600px;
-    flex-direction: column;
-    flex-basis: 43%;
-}
-
-
-.menu__card-title{
-    margin-top:0;
-    padding-bottom: 32px;
-    margin-bottom: 0;
-    font-family: 'Inter', Arial, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 30px;
-}
-
-.menu__card-list{
-    font-family:"Noto Serif",'Times New Roman', serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
-    list-style: none;
-    padding-left: 0;
-    margin-top:0;
-    padding-bottom: 16px;
-}
-
-.menu__card-list-item{
-    padding-bottom: 16px;
-    display: flex;
-    
-}
-.menu__card-list-item:last-child{
-    padding-bottom:0;
-}
-
-.menu__divider{
-    flex-grow: 1;
-    border-bottom: 1px solid white;
-    margin:0 10px 0 10px;
-}
-
-
-
-
-.baked{
-    margin-top: 100px;
 }
