--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -10,7 +10,12 @@
 }
 
 .reservation__title{
-  padding-top:100px;
+    padding-top:100px;
+    font-family: Inter,Arial, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 44px;
+    line-height: 52px;
 }
 
 .reservation__form{
@@ -18,72 +23,5 @@ margin-top: 80px;
 padding-bottom: 120px;
 border-radius: 4px;
 max-width: 385px;
-display: flex;
-flex-direction: column;
-margin-left: auto;
-margin-right: auto;
-}
-.reservation__form-fieldset{
-padding-bottom: 8px;
-border-style: none;
-text-align: start;
-padding: 0;
-margin: 0 0 8px 0;
-font-family: 'Inter', Arial, sans-serif;
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 20px;
-}
-.reservation__form-input{
-    border-radius: 4px;
-    margin-bottom: 32px;
-    max-width: 385px;
-    height:60px;
-    font-family: 'Inter', Arial, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    color: #838383;
-}
 
-.reservation__button{
-    border-radius: 4px;
-    transition: opacity .5s ease-out;
-    border-style: none;
-    background-color:#2f80ed;
-    color:white;
-    height:60px;
-    max-width: 385px;
-    font-family: 'Inter', Arial, sans-serif;
-    margin-top: 32px;
-    margin-bottom: 32px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-}
-
-.reservation__button:hover{
-    opacity: 70%;
-}
-
-.reservation__checkbox-container{
-display: flex;
-justify-content: center;
-margin-top: 0px;
-column-gap: 12px;
-}
-
-.reservation__checkbox-text{
-    margin-top:0px;
-}
-
-.reservation__checkbox{
-    border-radius: 2px;
-    margin-top:0px;
-    height:20px;
-    width:20px;
-    padding-left: 12px;
 }
