--- a/blocks/header.css
+++ b/blocks/header.css
@@ -34,7 +34,7 @@
     margin-bottom: 0px;
 }
 .header__span-accent{
-    font-family: "Noto Serif",'Times New Roman', serif;;
+    font-family: "Noto Serif",'Times New Roman', serif;
     font-style: italic;
     font-weight: normal;
     font-size: 60px;
