--- a/blocks/header.css
+++ b/blocks/header.css
@@ -65,27 +65,43 @@
     font-size: 16px;
     line-height: 20px;
     color:#6f6f6f;
-    align-items: flex-end;
-    justify-content: space-between;
     margin-top: auto;
+    flex-direction: column;
+    align-content: spa;
+
 }
 
-.header__footer-hours:last-child{
-    margin-left: auto;
+.header__hours{
+    margin-bottom: 0;
+    margin-left: 80px;
+    margin-top: 0;
+    align-self: flex-start;
 }
 
-.header__paragraph{
-    margin: 0;
+.header__hours:last-child{
+    margin-bottom: 40px;
+
 }
+
+.header__address{
+    margin-bottom: 40px;
+    margin-right: 80px;
+    align-self: flex-end;
+    margin-top: 0;
+}
+
+
+
 
 .header__footer-hours{
 
     margin-bottom: 40px;
     margin-left: 80px;
-    margin-top: auto; 
+
   
 }
 .header__footer-address{
-    margin-right: 80px;
+    margin-left: auto;
     margin-bottom: 40px;
-}
+    margin-right: 80px;
+  }
