--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,74 +1,81 @@
+.footer {
+  background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
+  color: white;
+  padding-top: 60px;
+}
 
+.footer__content {
+  display: flex;
+}
 
-  .footer{
-    background: linear-gradient(180deg, #0A2850 0%, #071931 100%);
-    color:white;
-    padding-top: 60px;
-  }
+.footer__logo {
+  width: 116px;
+  height: 21px;
+  padding-left: 80px;
+}
 
-  .footer__content{
-    display: flex;
-  }
+.footer__social-media {
+  margin-left: auto;
+  margin-right: 100px;
+}
 
-  .footer__logo{
-    width:116px;
-    height:21px;
-    padding-left: 80px;
-  }
+.footer__social-heading {
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  margin: 0;
+  padding-bottom: 20px;
+}
+.footer__list {
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
-  .footer__social-media{
-   margin-left:auto;
-   margin-right: 100px;
+.footer__social-media:last-child {
+  padding-top: 16px;
+}
 
-  }
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  padding-right: 10px;
+}
 
-  .footer__social-heading{
-    font-family: 'Inter', Arial, sans-serif;
-font-style: normal;
-font-weight: bold;
-font-size: 16px;
-line-height: 20px;
-margin: 0;
-padding-bottom: 20px;
+.footer__social-link {
+  transition-timing-function: ease-out;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  color: white;
+  text-decoration: none;
+}
 
-  }
-  .footer__list{
-  font-family: 'Inter', Arial, sans-serif;
-font-style: normal;
-font-weight: normal;
-font-size: 16px;
-line-height: 20px;
-list-style: none;
-margin:0;
-padding: 0;
-  }
+.footer__list-item:first-child {
+  padding-bottom: 16px;
+}
 
-  .footer__social-media:last-child{
-    padding-top: 16px;
-  }
+.footer__social-link:hover {
+  transition-duration: 1.2s;
+  color: #c1c1c1;
+  text-decoration: none;
+}
 
-  .footer__social-icon{
-    width: 16px;
-    height:16px;
-    padding-right: 10px;
-  }
-
-  .footer__social-link{
-    transition-timing-function: ease-out;
-  }
-
-  .footer__social-link:hover{
-    transition-duration: 1.2s;
-    color:#c1c1c1;
-  }
-
-
-  .footer__copyright{
-    padding: 108px 0 60px 80px;
-    margin:0;
-    font-family: 'Inter', Arial, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
+.footer__copyright {
+  padding: 108px 0 60px 80px;
+  margin: 0;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
 }
