--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,71 +1,59 @@
-.form{
-    display: flex;
-flex-direction: column;
-margin-left: auto;
-margin-right: auto;
+.form {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
 }
-.form__fieldset{
-    padding-bottom: 8px;
-    border-style: none;
-    text-align: start;
-    padding: 0;
-    margin: 0 0 8px 0;
-    font-family: 'Inter', Arial, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    }
-    .form__input{
-        border-radius: 4px;
-        margin-bottom: 32px;
-        max-width: 385px;
-        height:60px;
-        font-family: 'Inter', Arial, sans-serif;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
-        line-height: 30px;
-        color: #838383;
-    }
-    
-    .form__button{
-        border-radius: 4px;
-        transition: opacity .5s ease-out;
-        border-style: none;
-        background-color:#2f80ed;
-        color:white;
-        height:60px;
-        max-width: 385px;
-        font-family: 'Inter', Arial, sans-serif;
-     
-        margin-bottom: 32px;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 20px;
-    }
-    
-    .form__button:hover{
-        opacity: 70%;
-    }
-    
-    .form__checkbox-container{
-    display: flex;
-    justify-content: center;
-    margin-top: 0px;
-    column-gap: 12px;
-    }
-    
-    .form__checkbox-text{
-        margin-top:0px;
-    }
-    
-    .form__checkbox{
-        border-radius: 2px;
-        margin-top:0px;
-        height:20px;
-        width:20px;
-        padding-left: 12px;
-    }
-    
+.form__fieldset {
+  padding-bottom: 8px;
+  border-style: none;
+  text-align: start;
+  padding: 0;
+}
+
+.form__label {
+  display: flex;
+  flex-direction: column;
+}
+
+.form__label_checkbox {
+  flex-direction: row;
+  justify-content: center;
+}
+.form__input {
+  border-radius: 4px;
+  margin-bottom: 32px;
+  margin-top: 8px;
+  max-width: 385px;
+  height: 60px;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  color: #838383;
+}
+
+.form__button {
+  border-radius: 4px;
+  transition: opacity 0.5s ease-out;
+  border-style: none;
+  background-color: #2f80ed;
+  color: white;
+  height: 60px;
+  max-width: 385px;
+  margin-bottom: 32px;
+  width: 100%;
+}
+
+.form__button:hover {
+  opacity: 70%;
+}
+
+.form__checkbox {
+  border-radius: 2px;
+  margin-top: 0px;
+  height: 20px;
+  width: 20px;
+  margin-right: 12px;
+}
