--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,71 +1,69 @@
-
-.recipes{
-    background-color: #FFF;
-    background-image: url("/se_project_coffeeshop/images/background_recipes.svg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
+.recipes {
+  background-color: #fff;
+  background-image: url("../images/background_recipes.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
 }
 
-.recipes__title{
-    max-width: 580px;
-    margin-left: 80px;
-    margin-top: 100px;
-    margin-bottom: 0;
-    font-family: 'Inter', Arial, sans-serif;
-    font-style: normal;
-    font-weight:500;
-    font-size: 44px;
-    line-height: 52px;
+.recipes__title {
+  max-width: 580px;
+  margin-left: 80px;
+  margin-top: 100px;
+  margin-bottom: 0;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
 }
 
-.recipes__subtitle{
-    font-family: "Noto Serif",'Times New Roman', serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    margin-top: 24px;
-    max-width: 438px;
-    margin-left: 80px;
-    margin-bottom: 0;
+.recipes__subtitle {
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  margin-top: 24px;
+  max-width: 438px;
+  margin-left: 80px;
+  margin-bottom: 0;
 }
-.recipes__videos{
-   display: flex;
-   justify-content: center;
-   margin-top: 80px;
-   margin-bottom: 215px;
+.recipes__videos {
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
+  margin-bottom: 215px;
 }
-.recipes__video{
-    margin-left: 40px;
+.recipes__video {
+  margin-left: 0px;
 }
-
-
-.recipes__iframe{
-    width: 480px;
-    height:273px;
-    border:0;
+.recipes__video:last-child {
+  margin-left: 40px;
 }
 
-
-.recipes__video-captions{
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-.recipes__video-caption{
-    margin: 0;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 30px;
-    margin-top: 24px;
-    max-width: 480px;
+.recipes__iframe {
+  width: 480px;
+  height: 273px;
+  border: 0;
 }
 
-
+.recipes__video-captions {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.recipes__video-caption {
+  margin: 0;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  margin-top: 24px;
+  max-width: 480px;
+}
