--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,8 @@
 @import url("../vendor/normalize.css");
 @import url("../blocks/page.css");
 @import url("../blocks/header.css");
-@import url("../blocks/header-logo.css");
+@import url("../blocks/logo.css");
+@import url("../blocks/nav.css");
 @import url("../blocks/menu.css");
 @import url("../blocks/card.css");
 @import url("../blocks/recipes.css");
@@ -9,6 +10,3 @@
 @import url("../blocks/form.css");
 @import url("../blocks/about.css");
 @import url("../blocks/footer.css");
-
-
-
