--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,85 +1,83 @@
-.header{
-    display: flex;
-    flex-direction: column;
-     background-color: #FFF;
-     background-image: url("../images/background_header.svg");
-     background-size: cover;
-     background-repeat: no-repeat;
-     background-position: center;
-     min-height: 720px;
-     max-height: 800px;
-     height: 100vh;
-     position: relative;
-     z-index: 0;
+.header {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  background-image: url("../images/background_header.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 720px;
+  max-height: 800px;
+  height: 100vh;
+  position: relative;
+  z-index: 0;
 }
-.header__image{
-    width: 646px;
-    height:568px;
-    position: absolute;
-    top:124px;
-    right:5px;
-    z-index:-1;
-}
-
-.header__title{
-    margin-left: 80px;
-    margin-top: 80px;
-    max-width: 729px;
-    font-family:'Inter', Arial, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 60px;
-    line-height: 72px;
-    z-index: 2;
-    margin-bottom: 0px;
-}
-.header__span-accent{
-    font-family: "Noto Serif",'Times New Roman', serif;
-    font-style: italic;
-    font-weight: normal;
-    font-size: 60px;
-    line-height: 72px;
-    color: #2F80ED;
-    display: block;
+.header__image {
+  width: 646px;
+  height: 568px;
+  position: absolute;
+  top: 124px;
+  right: 5px;
+  z-index: -1;
 }
 
-
-.header__description{
-    margin-left: 80px;
-    margin-top: 28px;
-    font-family:"Noto Serif",'Times New Roman', serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    max-width: 683px;
-    margin-bottom: 0;
+.header__title {
+  margin-left: 80px;
+  margin-top: 80px;
+  max-width: 729px;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 72px;
+  z-index: 2;
+  margin-bottom: 0px;
+}
+.header__span-accent {
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 60px;
+  line-height: 72px;
+  color: #2f80ed;
+  display: block;
 }
 
-
-.header__footer{
-    display: flex;
-    font-family: 'Inter', Arial, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    color:#6f6f6f;
-    margin-top: auto;
-    justify-content: space-between;
-    align-items: flex-end;
+.header__description {
+  margin-left: 80px;
+  margin-top: 28px;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  max-width: 683px;
+  margin-bottom: 0;
 }
 
-.header__paragraph{
-    margin-top: 0;
-    margin-bottom: 0;
-}
-.header__paragraph:last-child{
-    margin-bottom: 40px;
+.header__footer {
+  display: flex;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #6f6f6f;
+  margin-top: auto;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 
-.header__hours{
-    margin-top: 0;
+.header__paragraph {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.header__paragraph:last-child {
+  margin-bottom: 40px;
+}
 
-    margin-left: 80px;
+.header__hours {
+  margin-top: 0;
+
+  margin-left: 80px;
 }
