--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,43 +1,41 @@
-
-.menu{
-    background-color: #0a2750;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    color:white;
-    background-image: url("../images/background_menu.svg");
+.menu {
+  background-color: #0a2750;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  color: white;
+  background-image: url("../images/background_menu.svg");
 }
 
-.menu__title{
-
-    margin:0 auto 0 auto;
-    text-align: center;
-    max-width: 780px;
-    padding-top: 100px;
-    font-family: 'Inter', Arial, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 44px;
-    line-height: 52px;
+.menu__title {
+  margin: 0 auto 0 auto;
+  text-align: center;
+  max-width: 780px;
+  padding-top: 100px;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
 }
 
-.menu__subtitle{
-    margin:0 auto 0 auto;
-    text-align: center;
-    margin-top: 24px;
-    max-width: 780px;
-    font-family: "Noto Serif",'Times New Roman', serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
+.menu__subtitle {
+  margin: 0 auto 0 auto;
+  text-align: center;
+  margin-top: 24px;
+  max-width: 780px;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
 }
 
-.menu__cards{
-    margin-top: 100px;
-    display:flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding-bottom: 100px;
-    column-gap: 100px;
+.menu__cards {
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-bottom: 100px;
+  column-gap: 100px;
 }
