--- a/blocks/form.css
+++ b/blocks/form.css
@@ -16,7 +16,7 @@
   flex-direction: column;
 }
 
-.form__label_checkbox {
+.form__label_type_checkbox {
   flex-direction: row;
   justify-content: center;
 }
